[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Resources/Graphics/Ships/Default/ship.png" type="Texture" id=2]
[ext_resource path="res://Resources/Graphics/Target.png" type="Texture" id=3]
[ext_resource path="res://Scripts/ChargeProgress.gd" type="Script" id=4]
[ext_resource path="res://Resources/Graphics/Misc/Charge.png" type="Texture" id=5]
[ext_resource path="res://Resources/Shaders/Radius.tres" type="Shader" id=6]
[ext_resource path="res://Resources/Shaders/Disintegrate.tres" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 6 )
shader_param/otherPlayerCenter1 = null
shader_param/otherPlayerAlive1 = null
shader_param/otherPlayerCenter2 = null
shader_param/otherPlayerAlive2 = null
shader_param/movementRange = null
shader_param/instanceRandom = null

[sub_resource type="QuadMesh" id=5]
size = Vector2( 500, 500 )

[sub_resource type="CircleShape2D" id=1]
radius = 18.2483

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/disintegrationProgress = 0.0
shader_param/pixelSize = 1.0

[sub_resource type="CircleShape2D" id=3]
radius = 54.5894

[node name="Player" type="Area2D" groups=["player"]]
position = Vector2( 500, 500 )
z_index = 1
collision_mask = 12
script = ExtResource( 1 )
spriteName = "Default"
spriteScale = 2.0
halfSpriteDirection = Vector2( 1, 0 )

[node name="Radius" type="MeshInstance2D" parent="."]
material = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 4 )
shape = SubResource( 1 )

[node name="Target" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ChargeProgress" type="TextureProgress" parent="."]
material = SubResource( 6 )
margin_left = -149.0
margin_top = -153.0
margin_right = 151.0
margin_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.0
texture_progress = ExtResource( 5 )
fill_mode = 4
script = ExtResource( 4 )

[node name="GrazeArea" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrazeArea"]
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="area_entered" from="GrazeArea" to="." method="_on_GrazeArea_area_entered"]
[connection signal="area_exited" from="GrazeArea" to="." method="_on_GrazeArea_area_exited"]
